--- a/frontend/index.html
+++ b/frontend/index.html
@@ -263,7 +263,7 @@ document.getElementById("micBtn").onclick = () => {
     STATE = "greet";
     rising = true;
     riseStartTime = performance.now();
-    speak("Seid gegrüßt, mein Freund...", false);
+    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausendjährigem Schlaf im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Was ist Euer Begehr?", false);
     return;
   }
 
