--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,33 +152,33 @@ function animate() {
 
   const now = performance.now();
 
+  // === 3. BEIM ANTWORTEN → ZURÜCK AUF FRONTAL ===
   if (rising) {
     const t = (now - riseStartTime) / riseDuration;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, -Math.PI / 2, 0.03);
+    // Ziel: FRONTAL → X=0 Y=0
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.03);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
     if (t >= 1) rising = false;
   }
+
+  // === 2. "Hmmmm..." → LANGSAM NACH LINKS NEIGEN (UND BLEIBEN) ===
   else if (hmNeigen) {
     const t = Math.min(1, (now - hmStartTime) / hmDuration);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + 0.3, t);
-    model.rotation.y = THREE.MathUtils.lerp(
-      model.rotation.y,
-      baseRotY - 0.3 - Math.PI / 2,
-      t
-    );
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, t);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY + 0.25, t);
     if (t >= 1) hmNeigen = false;
   }
+
+  // === (OPTIONAL) TALKING-ANIMATION BLEIBT — leichtes Atmen ===
   else if (talking) {
     model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, -Math.PI / 2, 0.02);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.02);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.02);
   }
+
+  // === 1. IDLE → FRONTAL BLEIBEN ===
   else {
-    model.rotation.y = THREE.MathUtils.lerp(
-      model.rotation.y,
-      baseRotY - Math.PI / 2,
-      0.02
-    );
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.02);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
     model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
   }
